--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-01-22 New Temporary Servers Added & All Severs Tested.</b></li>
+      <li><b>2020-01-27 All Servers Tested & Fixed All Servers.</b></li>
+      <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
       <li>2021-01-21 New 8 Temporary Servers Added.</li>
       <li>2021-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
@@ -86,7 +87,7 @@
   <p class="h6 text-danger"><b>* Sever Code "XX-S0X" - My Own Hosted Servers</b></p>
   <p class="h6 text-danger"><b>* Sever Code "XX-TS0X" - Servers Found in Internet. Owner Unkown.</b></p>
   <p class="h4 m-3"><b>SSH/SSL Servers</b></p>
-  <!-- Row 1 -->
+<!-- Row 1 -->
   <div class="card-deck">
       <div class="card">
         <div class="card-body">
@@ -96,6 +97,46 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.59.250.209</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+          </ul>  
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS01</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>157.230.252.45</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>zexpor</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>zexpor</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+          </ul>  
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS02</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>157.230.240.94</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>zexpor</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>zexpor</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+          </ul>  
+        </div>
+      </div>
+    </div>
+    <br>
+<!-- Row 2 -->
+    <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS03</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.168</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
           </ul>  
         </div>
@@ -126,7 +167,7 @@
       </div>
     </div>
     <br>
-    <!-- Row 2 -->
+<!-- Row 3 -->
     <div class="card-deck">
      <div class="card">
         <div class="card-body">
@@ -154,7 +195,7 @@
       </div>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS01</b></h5>
+          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS04</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.168</b></li>
@@ -166,7 +207,7 @@
       </div>
     </div>
     <br>
-    <!-- Row 3 -->
+<!-- Row 4 -->
     <div class="card-deck">
      <div class="card">
         <div class="card-body">
@@ -205,32 +246,9 @@
         </div>
       </div>
     </div>
-    <!-- Row 4 -->
+    <br>
+<!-- Row 5 -->
     <div class="card-deck">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS05</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>128.199.82.143</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS06</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>128.199.82.135</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS07</b></h5>
@@ -243,47 +261,7 @@
           </ul>  
         </div>
       </div>
-    </div>
-    <div class="card-deck">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-jp" aria-role="presentation" aria-label="Japan Flag"></i>&nbsp;&nbsp;JP-TS01</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.162.106.247</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-jp" aria-role="presentation" aria-label="Japan Flag"></i>&nbsp;&nbsp;JP-TS02</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.104.127.10</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-jp" aria-role="presentation" aria-label="Japan Flag"></i>&nbsp;&nbsp;JP-TS02</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.104.121.228</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
-    </div>
-    <div class="card-deck">
-      <div class="card">
+            <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-TS08</b></h5>
           <ul class="list-group">
@@ -307,19 +285,9 @@
           </ul>  
         </div>
       </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outlying Islands Flag"></i>&nbsp;&nbsp;US-TS01</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>United State</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>45.79.153.248</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>goosee</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: red;">Squid</span></b></li>
-          </ul>  
-        </div>
-      </div>
     </div>
+    <br>
+  
     <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
