--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-01-27 All Servers Tested & Fixed All Servers.</b></li>
+      <li><b>2020-01-27 All Servers Tested & Fixed..</b></li>
       <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
       <li>2021-01-21 New 8 Temporary Servers Added.</li>
       <li>2021-01-04: Update Singapore Server Username and Password.</li>
