--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.59.250.209</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>mulaps</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>mulaps</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: red;">Server</span> | <span style="color: green;">Squid</span></b></li>
           </ul>  
         </div>
       </div>
