--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
   <br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-02-06 V2Ray Server Added..</b></li>
+      <li><b>2020-02-09 Two Indian Servers Added..</b></li>
+      <li>2020-02-06 V2Ray Server Added..</li>
       <li>2020-02-02 All Servers Tested & Fixed..</li>
       <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
-      <li>2021-01-21 New 8 Temporary Servers Added.</li>
-      <li>2021-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
     </ul>
   </div>
@@ -168,7 +167,33 @@
       </div>
     </div>
     <br>
-    </div>
+    <!-- Row 3 -->
+     <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-flag-in" aria-role="presentation" aria-label="India Flag"></i>&nbsp;&nbsp;IN-S01</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>India</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>140.238.255.99</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+          </ul>  
+        </div>
+      </div>
+     <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b><i class="em em-flag-in" aria-role="presentation" aria-label="India Flag"></i>&nbsp;&nbsp;IN-S01</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>India</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>140.238.247.30</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b><span style="color: green;">Server</span> | <span style="color: green;">Squid</span></b></li>
+          </ul>  
+        </div>
+      </div>
+    </div> 
 
 <!-- Row 3 -->   <div id="v2ray"></div>
   <p class="h4 m-3"><b>V2Ray Servers</b></p>
@@ -197,7 +222,6 @@
         </div>
       </div>
    </div>
-
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -273,6 +297,7 @@
     </form>
   </div>
   <br>
+      </div>
 <hr />
   <footer class="footer footer-dark">
       <div class="container text-center">
