--- a/index.html
+++ b/index.html
@@ -209,16 +209,16 @@
             <li class="list-group-item list-group-item-white">
             	  <!-- Button trigger modal -->
 				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
-				  Click Here To Get Details
+				  Get Server Details
 				</button>
             </li>            
             <li class="list-group-item list-group-item-white">
             	  <!-- Button trigger modal -->
 				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter1">
-				  Click Here To Get VMess Code
+				  Get VMess Code
 				</button>
             </li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: red;">Not Working</span></b></li>
           </ul>  
         </div>
       </div>
