--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
   </div>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-02-09 Two Indian Servers Added..</b></li>
+      <li><b>2020-02-12 Singapore Server Updated..</b></li>
+      <li>2020-02-09 Two Indian Servers Added..</li>
       <li>2020-02-06 V2Ray Server Added..</li>
       <li>2020-02-02 All Servers Tested & Fixed..</li>
       <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
