--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="#ssh/ssl">SSH/SSL Servers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#v2ray">V2Ray</a>
+              <a class="nav-link disabled" href="#v2ray">V2Ray</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://lalantha.me">Contact Me</a>
@@ -196,96 +196,6 @@
         </div>
       </div>
     </div> 
-
-<!-- Row 3 -->   <div id="v2ray"></div>
-  <p class="h4 m-3"><b>V2Ray Servers</b></p>
-   <div class="card-deck">
-   	 <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyssh.me</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: MickySSH</b></li>
-            <li class="list-group-item list-group-item-white">
-            	  <!-- Button trigger modal -->
-				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
-				  Get Server Details
-				</button>
-            </li>            
-            <li class="list-group-item list-group-item-white">
-            	  <!-- Button trigger modal -->
-				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter1">
-				  Get VMess Code
-				</button>
-            </li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Server Status: <span style="color: red;">Not Working</span></b></li>
-          </ul>  
-        </div>
-      </div>
-   </div>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Server Details</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS03</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Protocol: VMess</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickyssh.me</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Server Port: 443</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UserID: 0c5bd00a-9699-46e0-aaec-67b82584a053</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>AlterID: 32</b></li>            
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Security: Auto</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Network Type: WebSocket</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Header: Your Host</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /7e0d66e81da33/</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
-          </ul>  
-        </div>
-      </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal1 -->
-<div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">VMess Code</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-  		<p>
-  			vmess://d3VsYWJpbmdfd3d3Lm1pY2t5c3NoLm1lID0gdm1lc3MsIHd3dy5taWNreXNzaC5tZSwgICAgIDQ0MywgY2hhY2hhMjAtaWV0Zi1wb2x5MTMwNSwgIjBjNWJkMDBhLTk2OTktNDZlMC1hYWVjLTY3YjgyNTg0YTA1MyIsIG92ZXItdGxzPXRydWUsICAgICBjZXJ0aWZpY2F0ZT0xLCBvYmZzPXdzLCBvYmZzLXBhdGg9Ii83ZTBkNjZlODFkYTMzLyIsIAo=
-  		</p>
-  	</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-  
     <br>
     <p class="h4 m-3"><b>For Personal Accounts</b></p>
     <p class="h5 m-3">If you want to configure your own SSH/SSL or V2Ray Server contact me on Facebook or Whatsapp</p>
