--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="#ssh/ssl">SSH/SSL Servers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#v2ray">V2Ray</a>
+              <a class="nav-link" href="#v2ray">V2Ray</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://lalantha.me">Contact Me</a>
@@ -60,9 +60,9 @@
   </div>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2020-02-12 Singapore Server Updated..</b></li>
+      <li><b>2020-02-15 V2Ray Server Added..</b></li>
+      <li>2020-02-12 Singapore Server Updated..</li>
       <li>2020-02-09 Two Indian Servers Added..</li>
-      <li>2020-02-06 V2Ray Server Added..</li>
       <li>2020-02-02 All Servers Tested & Fixed..</li>
       <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
